# nerf-geometry-analysis

./: .gitignore  .gitmodules  README.md  Untitled.ipynb  auto.bash  auto_eval.bash  eval.bash  eval.ipynb  long-plane-eval.ipynb  plane-eval.ipynb  plane-geometry-eval.ipynb  pyproject.toml  requirements.txt  run_exps.bash  train.ipynb
Blender/: black_line.blend  black_line_bg_none.blend  black_line_bg_white.blend  black_line_rainbow_sky.blend  black_line_world.blend  black_square_bg_none.blend  black_square_bg_white.blend  checkerboard.blend  checkerboard.blend1  checkerboard_specular.blend  checkered_cube.blend  checkered_cube_rainbow_sky.blend  checkered_line.blend  checkered_plane.blend  checkered_plane_rainbow_sky.blend  checkered_plane_specular.blend  checkered_sphere.blend  checkered_sphere.blend1  checkered_sphere_specular.blend  checkered_square_pyramid.blend  checkers.blend  checkers.blend1  long_plane_720x480.blend  pattern_plane1.blend  pattern_plane1_720x480.blend  pattern_plane1_720x480_bg_black.blend  pattern_plane1_720x480_circle_path.blend  striped_line.blend  white_line.blend
Blender/Resources/: sh_gen.py
Blender/checkerboard/: log.txt  transforms.json  transforms_test.json
Blender/pattern_plane1_720x480/: log.txt  transforms.json
configs/instant-ngp/: config.yml
configs/instant-ngp-bounded/: config.yml
configs/kplanes/: config.yml
configs/nerfacto/: config.yml
configs/tensorf/: config.yml
nga/: dataparser_configs.py  method_configs.py  utils.py
nga/models/: base_model.py  instant_ngp.py  jean.py  mipnerf.py  nerfacto.py  tensorf.py  vanilla_nerf.py  yuto.py
nga/pipelines/: nga_pipeline.py
(+26 files in other folders)
