[project]
name = "nga"
description = "TBD"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["nga*"]

# register the entry point of your new method here:
# [project.entry-points.'nerfstudio.method_configs']
# method-template = 'method_template.template_config:method_template'